--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
      
       .slides_1 {
-        position: relative;
+        position: absolute;
+        display: block;
+        
         height: 100%;
       }
 
@@ -12,12 +14,16 @@
         color: #000;
         margin: 0;
         padding: 0;
+        
       }
 
       .swiper {
         width: 100%;
-        height: 70px;
+        height: auto;
+       
       }
+
+      
 
       .swiper-slide {
         text-align: center;
@@ -90,6 +96,7 @@
 
   .header{
     width: 100%;
+    
 }
 
 .header p {
@@ -100,4 +107,39 @@
     background: linear-gradient(90deg, #F8F8F8 1.39%, #FFFFFF 100%);
     color: #726e6e;
     font-weight: 700;
+}
+
+.s1 {
+  margin: 16px;
+  
+}
+
+
+.footer{
+  
+  position: relative;
+  top: 450px;
+  
+}
+
+.footer p {
+  font-family: 'TT Lakes2';
+    font-size: 5px;
+}
+
+input[type="button"] {
+  height: 30px; 
+  width: 100px;
+  font-size: 12px;
+  font-family: 'TT Lakes';
+}
+
+.button {
+  padding: 0.5%;
+  background-color: none;
+  margin: 0px 0.5%;
+  border-radius: 7px;
+  border: 2px solid;
+  border-color: transparent;
+  cursor: pointer;
 }
